ultimos cambios sin imagenes

--- a/locales/es/tablu.json
+++ b/locales/es/tablu.json
@@ -5,7 +5,7 @@
   },
   "hero": {
     "title": "Planners personalizados que inspiran productividad y organización con estilo.",
-    "description": "Tablú llega a Bolivia de la mano de Marca Fusión. Planners acrílicos y magnéticos en múltiples formatos: To Do List, semanal, mensual, anual y Kanban."
+    "description": "Tablú es una marca con presencia en Perú y México que llega a Bolivia de la mano de Marca Fusión"
   },
   "categories": {
     "title": "Encuentra tu planner ideal según tu estilo de vida",
